src/test/ui/feature-gate/issue-43106-gating-of-must_use.stderr
error: cannot determine resolution for the attribute macro `must_use`
  --> $DIR/issue-43106-gating-of-must_use.rs:3:4
   |
LL | #![must_use = "4200"]
   |    ^^^^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to previous error

